# sha256-avx512-miner

./: CMakeLists.txt  README.md  build.sh  main.cpp  miner.cpp  miner.h
